--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://annamlee.github.io/anna-lee/",
+  "homepage": "https://annamlee.me",
   "name": "anna-lee",
   "version": "0.1.0",
   "private": true,
